--- a/src/assets/styles/components/dark-mode.module.scss
+++ b/src/assets/styles/components/dark-mode.module.scss
@@ -25,6 +25,13 @@
         fill: var(--color-text-link-secondary-hover);
       }
     }
+
+    &:active,
+    &:focus-within {
+      box-shadow: var(--color-box-shadow-focus-default);
+      padding: .5rem;
+      margin: -.5rem;
+    }
   }
 
   &__checkbox {
