--- a/src/assets/styles/components/header.module.scss
+++ b/src/assets/styles/components/header.module.scss
@@ -4,7 +4,7 @@
   display: grid;
   grid-template-columns: 1fr auto;
   align-items: center;
-  margin-bottom: 3.5rem;
+  margin-bottom: 3.6rem;
 
   &__title {
     margin: 0;
