--- a/src/assets/styles/components/user-info.module.scss
+++ b/src/assets/styles/components/user-info.module.scss
@@ -96,12 +96,15 @@
     grid-auto-flow: column;
     justify-items: center;
     align-items: center;
+    margin-top: 0;
+    margin-bottom: .9rem;
     padding: 1.8rem 1.4rem 1.9rem 1.5rem;
     border-radius: 1rem;
     background-color: var(--color-background-primary);
 
     @media screen and (min-width: $sm-device) {
       justify-items: start;
+      margin-bottom: 1.1rem;
       padding: 1.5rem 3.2rem 1.7rem;
     }
 
@@ -143,8 +146,12 @@
   }
 
   &__link-item {
-    line-height: 1.9rem;
+    line-height: 1.925rem;
     padding-left: 3.3rem;
+
+    @media screen and (min-width: $sm-device) {
+      line-height: 2.222rem;
+    }
 
     &--disabled {
       $disabled: &;
